devel
-----

* Adjust default value for startup option `--rocksdb.max-subcompactions` from 1
  to 2. This allows compactions jobs to be broken up into disjoint ranges which
  can be processed in parallel.

* Allow initial, full dump shard synchronization to abort prematurely if it 
  turns out that the follower was removed from the plan as a follower (e.g. if 
  there are enough other in-sync followers).

* Make per-server values "numberOfCores" and "physicalMemory" available to
  agency to improve quality of potential future shard rebalancing algorithms.

* Unify the result structure of `db._version(true)` calls for arangosh and
  server console. Previously such a call in the server console would return
  a different structure that only consisted of the `details` subobject.
  This is now unified so that the result structure in the server console is
  consistent with arangosh, but strictly speaking this is a breaking change.

* Set the limit for ArangoSearch segment size to 256MB during recovery to avoid
  OOM kill in rare cases.

* Updated arangosync to 2.7.0.

* Updated Enterprise license behavior: now there will be a one hour period for
  a new deployment to provide the license. After that period, the read-only mode
  will be enforced.

* Added startup security option `--foxx.allow-install-from-remote` to allow 
  installing Foxx apps from remote URLs other than Github. The option is turned 
  off by default.

* Cancel ongoing RocksDB compactions on server shutdown.

* Added new option `--custom-query-bindvars` to arangoexport, so queries given 
  via option `--custom-query` can have bind variables in them. Also changed the 
  flag names `--query` to `--custom-query` and `--query-max-runtime` to 
  `--custom-query-max-runtime` to be like in the other client-tools.

* Improve some RocksDB-related error messages during server startup.

* Added startup options to adjust previously hard-coded parameters for the 
  RocksDB throttle: