@@ -1,0 +1,8 @@
+"id","a","b","c","d","e"
+1,"1",1,"1.3",null,-5
+2,null,"",3.1,-2.5,"ddd "" ' ffd"
+3,"this","is"
+4,let's,see,what,happens
+5,9999999999999999999999999999999999,test,-99999999,true,-888.4434
+6,10e4,20.5,-42, null ,false
+7,-1.05e2,1.05e-2,true,false,null
