@@ -56,6 +56,10 @@
   db._drop("UnitTestsImportCsvTypesPrecedence");
   db._drop("UnitTestsImportCsvMergeAttributes");
   db._drop("UnitTestsImportCsvNoEol");
+  db._drop("UnitTestsImportDataBatchSizeWithoutHeaderFile");
+  db._drop("UnitTestsImportDataBatchSizeWithoutHeaderFile2");
+  db._drop("UnitTestsImportDataBatchSizeWithHeaderFile");
+  db._drop("UnitTestsImportDataBatchSizeWithHeaderFile2");
   db._drop("UnitTestsImportTsv1");
   db._drop("UnitTestsImportTsv1Gz");
   db._drop("UnitTestsImportTsv2");
